# kaval

./: .gitignore  CLAUDE.md  LICENSE  Pipfile  README.md  expcore.py  kaval.py  pyproject.toml  run-experiments.py  runners.py  slugify.py  submit_experiments.py
command-templates/: command_template_generic.txt  command_template_shared.txt  command_template_shared_intelmpi_multithreaded.txt  command_template_shared_oversubscribe.txt  horeka-IntelMPI.txt  horeka-OpenMPI.txt  supermuc-IntelMPI-OpenMP.txt  supermuc-IntelMPI.txt  supermuc-OpenMPI.txt  supermuc-single-core.txt
examples/: test-app
examples/suites/: common.instances.yaml  generic-input.suite.yaml  import.suite.yaml  real-world.instances.yaml  test.suite.yaml
sbatch-templates/: generic_job_files.txt  horeka.txt  lichtenberg.txt  sbatch_template.txt  supermuc.txt
