[project]
name = "kaval"
version = "0.1.0"
description = "Orchestrate computational experiments across HPC environments."
requires-python = ">=3.9"
dependencies = [
    "pyyaml",
]

[project.scripts]
kaval = "kaval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "command-templates/**",
    "sbatch-templates/**",
]
